--- a/app/src/main/res/xml/data_extraction_rules.xml
+++ b/app/src/main/res/xml/data_extraction_rules.xml
@@ -12,7 +12,7 @@
     </cloud-backup>
     <!--
     <device-transfer>
-        <include .../>
+        <include .../>git
         <exclude .../>
     </device-transfer>
     -->
